wk_taa_taaqa/src/objects/Training_Ticket__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Training_Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>Contact.Account.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Training_Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <label>Course</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ARM 1on1</fullName>
                </value>
                <value>
                    <fullName>ARM 2.0 1on1</fullName>
                </value>
                <value>
                    <fullName>ARM 2.0 MTS</fullName>
                </value>
                <value>
                    <fullName>ARM 2 Hr – 1on1</fullName>
                </value>
                <value>
                    <fullName>ARM MTS</fullName>
                </value>
                <value>
                    <fullName>ClientRelate</fullName>
                </value>
                <value>
                    <fullName>ClientRelate Consulting</fullName>
                </value>
                <value>
                    <fullName>Federal Tax Research</fullName>
                </value>
                <value>
                    <fullName>How to do Accounting Research</fullName>
                </value>
                <value>
                    <fullName>How to do Tax Research</fullName>
                </value>
                <value>
                    <fullName>IntelliConnect for Accountants</fullName>
                </value>
                <value>
                    <fullName>IntelliConnect for Corporations</fullName>
                </value>
                <value>
                    <fullName>IntelliForms</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Introduction to IntelliConnect</fullName>
                </value>
                <value>
                    <fullName>January IntelliConnect Research Seminars</fullName>
                </value>
                <value>
                    <fullName>On-Site Training 1/2 Day</fullName>
                </value>
                <value>
                    <fullName>Payroll</fullName>
                </value>
                <value>
                    <fullName>Pension</fullName>
                </value>
                <value>
                    <fullName>Practical Tax Professional</fullName>
                </value>
                <value>
                    <fullName>Productivity Tools</fullName>
                </value>
                <value>
                    <fullName>Sales Tax</fullName>
                </value>
                <value>
                    <fullName>Sales Tax Radar</fullName>
                </value>
                <value>
                    <fullName>State Business Income</fullName>
                </value>
                <value>
                    <fullName>State Tax Research</fullName>
                </value>
                <value>
                    <fullName>Tax Prep Partner</fullName>
                </value>
                <value>
                    <fullName>Whats New and a Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ARM 2017</fullName>
                </value>
                <value>
                    <fullName>Corporate National 2017</fullName>
                </value>
                <value>
                    <fullName>National 2017</fullName>
                </value>
                <value>
                    <fullName>Other Customer 2017</fullName>
                </value>
                <value>
                    <fullName>Over 8K 2017</fullName>
                </value>
                <value>
                    <fullName>Schools 2017</fullName>
                </value>
                <value>
                    <fullName>Strategic CPA 2017</fullName>
                </value>
                <value>
                    <fullName>Under 8K 2017</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Onsite</fullName>
                </value>
                <value>
                    <fullName>Webinar MTS</fullName>
                </value>
                <value>
                    <fullName>Webinar 1 on 1</fullName>
                </value>
                <value>
                    <fullName>Onsite &amp; Webinar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Attendees__c</fullName>
        <label>Number of Attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ARM</fullName>
                </value>
                <value>
                    <fullName>ClientRelate</fullName>
                </value>
                <value>
                    <fullName>IntelliConnect</fullName>
                </value>
                <value>
                    <fullName>IntelliForms</fullName>
                </value>
                <value>
                    <fullName>IC Direct</fullName>
                </value>
                <value>
                    <fullName>Learning Center</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>R_L_Revenue__c</fullName>
        <formula>Account__r.R_L_Revenue_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>R&amp;L Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SLX_Created_Date__c</fullName>
        <label>SLX_Created_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Contacted</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Contacted Unscheduled</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Partially Completed</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Canceled Subscription</fullName>
                </value>
                <value>
                    <fullName>Attended MTS</fullName>
                </value>
                <value>
                    <fullName>Not Available</fullName>
                </value>
                <value>
                    <fullName>Declined - Refused Training</fullName>
                </value>
                <value>
                    <fullName>Declined - Comfortable with program</fullName>
                </value>
                <value>
                    <fullName>Declined - Rep Trained</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TICKETNO__c</fullName>
        <externalId>true</externalId>
        <label>TICKETNO</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Training_Date__c</fullName>
        <label>Training Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Outcomes__c</fullName>
        <label>Training Outcomes</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Training_Ticket__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training Ticket</label>
        <referenceTo>Training_Ticket__c</referenceTo>
        <relationshipName>Training_Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>R&amp;L Training</label>
    <listViews>
        <fullName>All_Training_Tickets</fullName>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Contact_Email__c</columns>
        <columns>Status__c</columns>
        <columns>Platform__c</columns>
        <columns>Course__c</columns>
        <columns>Training_Date__c</columns>
        <columns>Training_Outcomes__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>7.  All Training Tickets</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>Sales_Consultant_R_L_Training_Consulting</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_2015_Training_Tickets</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Account__c</columns>
        <columns>Contact_Email__c</columns>
        <columns>Training_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Platform__c</columns>
        <columns>Training_Outcomes__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2015 12:00 AM</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2015 12:00 AM</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Not Contacted,Contacted Unscheduled,Scheduled,Partially Completed</value>
        </filters>
        <label>1.  My Open 2015 Training Tickets</label>
        <sharedTo>
            <roleAndSubordinates>Sales_Consultant_R_L_Training_Consulting</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_2016_Training_Tickets</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Account__c</columns>
        <columns>Contact_Email__c</columns>
        <columns>Training_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Platform__c</columns>
        <columns>Training_Outcomes__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Not Contacted,Contacted Unscheduled,Scheduled,Partially Completed</value>
        </filters>
        <label>3.  My Open 2016 Training Tickets</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>Sales_Consultant_R_L_Training_Consulting</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_201_Training_Tickets</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Account__c</columns>
        <columns>Contact_Email__c</columns>
        <columns>Training_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Platform__c</columns>
        <columns>Training_Outcomes__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>12/1/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Not Contacted,Contacted Unscheduled,Scheduled,Partially Completed</value>
        </filters>
        <label>5.  My Open 2017 Training Tickets</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>Sales_Consultant_R_L_Training_Consulting</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Completed_2015_Training_Tickets</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Account__c</columns>
        <columns>Contact_Email__c</columns>
        <columns>Training_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Platform__c</columns>
        <columns>Training_Outcomes__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2015 12:00 AM</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2015 12:00 AM</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed,Canceled Subscription,Attended MTS,Declined Training</value>
        </filters>
        <label>2.  My Completed 2015 Training Tickets</label>
        <sharedTo>
            <roleAndSubordinates>Sales_Consultant_R_L_Training_Consulting</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Completed_2016_Training_Tickets</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Account__c</columns>
        <columns>Contact_Email__c</columns>
        <columns>Training_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Platform__c</columns>
        <columns>Training_Outcomes__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed,Canceled Subscription,Attended MTS,Declined Training</value>
        </filters>
        <label>4.  My Completed 2016 Training Tickets</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>Sales_Consultant_R_L_Training_Consulting</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Completed_2017_Training_Tickets</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Account__c</columns>
        <columns>Contact_Email__c</columns>
        <columns>Training_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Platform__c</columns>
        <columns>Training_Outcomes__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>12/1/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed,Canceled Subscription,Attended MTS,Declined Training</value>
        </filters>
        <label>6.  My Completed 2017 Training Tickets</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>Sales_Consultant_R_L_Training_Consulting</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>TTID-{00000}</displayFormat>
        <label>Ticket ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>R&amp;L Training</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>All_Fields_Required_in_Status_4_5_7</fullName>
        <active>false</active>
        <errorConditionFormula>AND(OR(
ISPICKVAL( Status__c , &quot;Partially Completed&quot;),
ISPICKVAL( Status__c , &quot;Completed&quot;),
ISPICKVAL( Status__c , &quot;Attended MTS&quot;)),
OR(
ISBLANK(TEXT(Platform__c)),
ISBLANK(TEXT(Course__c)),
ISBLANK(TEXT(Location__c)),
ISBLANK(Training_Date__c),
ISBLANK(Number_of_Attendees__c),
ISBLANK(Training_Outcomes__c)
)
)</errorConditionFormula>
        <errorMessage>Please populate Platform, Course, Location, Training Date, Number of Attendees, and Training Outcomes when Status is Partially Completed, Completed, or Attended MTS.</errorMessage>
    </validationRules>
</CustomObject>